--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ main{
 }
 
 nav{
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
 
 nav a{
@@ -81,6 +81,10 @@ nav a{
 
 nav ul a{
     margin: 15px;
+}
+
+nav a:hover{
+    color: var(--color-white);
 }
 
 .card{
@@ -93,7 +97,7 @@ nav ul a{
     top:50%;
     left:50%;
     transform: translate(-50% , -50%);
-    font-size: 2em;
+    font-size: 6em;
     display: none;
 }
 
@@ -109,9 +113,14 @@ nav ul a{
     display: block;
 }
 
-.fa-regular{
-    font-size: 5em;
+.card-cont{
+    gap: 20px;
 }
+
+.card-title{
+    margin-top: 20px;
+}
+
 
 /* header  */
 
@@ -135,6 +144,11 @@ nav ul a{
 
 h2{
     margin-bottom: 30px;
+    font-size: 3em;
+}
+
+h3{
+    font-size: 1.5em;
 }
 
 .card-title>*{
@@ -144,6 +158,7 @@ h2{
 
 dd{
     color: var(--color-secondary);
+    font-size: 1.3em;
 }
 
 .text-center{
