--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,17 @@ nav a:hover{
 
 .card-cont{
     gap: 20px;
+    margin-bottom: 40px;
 }
 
 .card-title{
     margin-top: 20px;
+}
+
+#popolari img{
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
 }
 
 
@@ -143,8 +150,15 @@ nav a:hover{
 /* text  */
 
 h2{
+    font-size: 2.5em;
+}
+
+.h2-recently{
     margin-bottom: 30px;
-    font-size: 3em;
+}
+
+.h2-general{
+    margin-bottom: 15px;
 }
 
 h3{
@@ -158,7 +172,11 @@ h3{
 
 dd{
     color: var(--color-secondary);
-    font-size: 1.3em;
+    font-size: 1.2em;
+}
+
+.dd-general{
+    margin-bottom: 20px;
 }
 
 .text-center{
@@ -172,6 +190,7 @@ dd{
     border: 2px var(--color-white) solid;
     border-radius: 25px;
     padding: 10px 20px;
+    margin-right: 25px;
     text-transform: uppercase;
     color: var(--color-white)
 }
