--- a/css/style.css
+++ b/css/style.css
@@ -89,10 +89,6 @@ nav a:hover{
 
 /* cardd */
 
-.card{
-    width: calc(100% / 6);
-}
-
 .img-hover{
     text-align: center;
     position: absolute;
@@ -101,6 +97,11 @@ nav a:hover{
     transform: translate(-50% , -50%);
     font-size: 6em;
     display: none;
+}
+
+.card-cont{
+    gap: 20px;
+    margin-bottom: 40px;
 }
 
 .card-img{
@@ -115,9 +116,10 @@ nav a:hover{
     display: block;
 }
 
-.card-cont{
-    gap: 20px;
-    margin-bottom: 40px;
+
+.card{
+    width: calc(100% / 6);
+    cursor: pointer;
 }
 
 .card-title{
@@ -137,6 +139,12 @@ width: 60%;
 padding-left:20px;
 padding-top: 20px;
 padding-bottom: 30px;
+}
+
+.small-logo{
+    width: 30%;
+    display: none;
+
 }
 
 #sidebar li img{
@@ -180,9 +188,17 @@ padding-bottom: 30px;
     font-size: 40px;
 }
 
+#second-list{
+    min-height: 0px;
+}
+
+#second-list ul{
+    overflow-y: auto;
+}
+
 #second-list li{
     padding-left: 20px;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 #second-list li a{
@@ -236,6 +252,19 @@ padding-bottom: 30px;
 
 /* toolbar */
 
+#cont-left{
+    width: 30%;
+}
+
+.central{
+    width: 40%;
+}
+
+#cont-right{
+    width: 30%;
+}
+
+
 .cont-img{
     width: 70px;
     padding-left: 10px;
@@ -271,24 +300,15 @@ padding-bottom: 30px;
     margin-right: 10px;
 }
 
-.left{
-    width: 20%;
-    background-color: var(--color-white);
-}
-
-.right{
-    width: 80%;
-}
-
-#cont-central{
-    padding-left: px;
-}
-
 #cont-central a i{
     color: var(--color-white);
-    font-size: 35px;
+    font-size: 25px;
     padding: 0 20px;
     margin-top: 10px;
+}
+
+.fa-circle-play:hover{
+    transform: scale(1.3);
 }
 
 #central-bar span{
@@ -298,6 +318,7 @@ padding-bottom: 30px;
 
 #central-bar{
     margin-top: 30px;
+    width: 100%;
 }
 
 .barsbig{
@@ -314,9 +335,12 @@ padding-bottom: 30px;
 
 .rightbig{
     width: 80%;
-    background-color:;
 }
 
+.left{
+    width: 20%;
+    background-color: var(--color-white);
+}
 
 
 
@@ -419,3 +443,74 @@ dd{
 }
 
  /* media query */
+@media screen and (max-width:992px){
+    nav ul{
+        flex-wrap: wrap;
+    }
+    nav ul li{
+        padding: 5px;
+    }
+    .card-cont{
+        flex-wrap: wrap;    
+    }
+    .card{
+        width: calc(100% / 4 - 20px);
+
+    }
+
+}
+
+@media screen and (max-width:768px){
+    .card{
+        width: calc(100% / 2 - 20px);
+
+    }
+}
+
+@media screen and (max-width:576px){
+    .small-logo{
+        display: block;
+        margin: 20px 30px 5px 25px;
+    }
+
+    .logo-side{
+        display: none;
+    }
+
+    #sidebar{
+        width: 100px;
+    }
+
+    main{
+        width: calc(100% - 100px);
+    }
+
+    .header{
+        width: calc(100% - 100px);
+        left: 100px;
+    }
+
+    #second-list ul{
+        display: none;
+    }
+
+    #sidebar h3{
+        display: none;
+    }
+
+    #mainlist ul li a:last-child{
+        display: none;
+    }
+
+    #ap a{
+        display: none;
+    }
+
+    #ap{
+        border: none;
+    }
+
+    #ap-bottom {
+        margin-bottom:20px;
+    }
+}
