--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 /* Reset */
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
@@ -19,114 +19,116 @@ ul {
 
 /* color  */
 :root {
-	--color-primary: #141922;
-	--color-sidebar: #000000;
-	--color-toolbar: #282828;
-	--color-secondary: #7D7F84;
-	--color-green: #adff2f;
-	--color-white: #ffffff;
+    --color-primary: #141922;
+    --color-sidebar: #000000;
+    --color-toolbar: #282828;
+    --color-secondary: #7D7F84;
+    --color-green: #adff2f;
+    --color-white: #ffffff;
 }
 
 /* general */
 
-body{
+body {
     font-family: "Montserrat", sans-serif;
     color: var(--color-white);
 }
 
-.wrapper{     
-    height: 100vh;    
-    background-color: var(--color-primary);     
-    /* overflow: hidden; */ 
+.wrapper {
+    height: 100vh;
+    background-color: var(--color-primary);
+    /* overflow: hidden; */
 }
 
-#toolbar{
+#toolbar {
     background-color: var(--color-toolbar);
     height: 100px;
 }
 
-.content{
+.content {
     height: calc(100vh - 100px);
     width: 100%;
 }
 
-#sidebar{
+#sidebar {
     background-color: var(--color-sidebar);
     width: 250px;
     height: 100%;
-    
+    overflow-y: auto;
+
 }
 
-img{
+img {
     width: 100%;
     display: block;
 }
+
 /* main  */
-   /* nav/bar  */
-main{
+/* nav/bar  */
+main {
     width: calc(100% - 250px);
     padding: 100px 20px 20px 20px;
     overflow-y: auto;
     color: var(--color-white);
 }
 
-nav{
+nav {
     margin-bottom: 70px;
 }
 
-nav a{
+nav a {
     text-transform: uppercase;
     color: var(--color-secondary);
 }
 
-nav ul a{
+nav ul a {
     margin: 15px;
 }
 
-nav a:hover{
+nav a:hover {
     color: var(--color-white);
 }
 
 /* cardd */
 
-.img-hover{
+.img-hover {
     text-align: center;
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50% , -50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     font-size: 6em;
     display: none;
 }
 
-.card-cont{
+.card-cont {
     gap: 20px;
     margin-bottom: 40px;
 }
 
-.card-img{
+.card-img {
     position: relative;
 }
 
-.card-img img:hover{
+.card-img img:hover {
     opacity: 0.5;
 }
 
-.card-img:hover .img-hover{
+.card-img:hover .img-hover {
     display: block;
 }
 
 
-.card{
+.card {
     width: calc(100% / 6);
     cursor: pointer;
 }
 
-.card-title{
+.card-title {
     margin-top: 20px;
 }
 
-#popolari img{
+#popolari img {
     width: 100%;
     aspect-ratio: 1 / 1;
     border-radius: 50%;
@@ -134,90 +136,90 @@ nav a:hover{
 
 /* sidebarr */
 
-.logo-side{
-width: 60%;
-padding-left:20px;
-padding-top: 20px;
-padding-bottom: 30px;
+.logo-side {
+    width: 60%;
+    padding-left: 20px;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
-.small-logo{
+.small-logo {
     width: 30%;
     display: none;
 
 }
 
-#sidebar li img{
+#sidebar li img {
     width: 30px;
 }
 
-#mainlist ul{
+#mainlist ul {
     padding-top: 20px;
     padding-left: 10px;
 }
 
-#sidebar ul li{
+#sidebar ul li {
     display: flex;
     align-items: center;
 }
 
-#sidebar a{
+#sidebar a {
     color: var(--color-white);
     padding-left: 10px;
 }
 
-#mainlist ul li{
-    border-left: 5px solid rgba(255, 255, 255, 0.0) ;
+#mainlist ul li {
+    border-left: 5px solid rgba(255, 255, 255, 0.0);
     padding-bottom: 10px;
 }
 
-#mainlist li a{
+#mainlist li a {
     color: var(--color-secondary);
 }
 
-#mainlist ul li:hover{
+#mainlist ul li:hover {
     border-left: 5px solid var(--color-green)
 }
 
-#sidebar h3{
+#sidebar h3 {
     padding-top: 20px;
     padding-left: 30px;
 }
 
-.fa-square-plus{
+.fa-square-plus {
     font-size: 40px;
 }
 
-#second-list{
+#second-list {
     min-height: 0px;
 }
 
-#second-list ul{
+#second-list ul {
     overflow-y: auto;
 }
 
-#second-list li{
+#second-list li {
     padding-left: 20px;
     padding-top: 10px;
 }
 
-#second-list li a{
+#second-list li a {
     color: var(--color-secondary);
 }
 
-#mainlist a:hover{
+#mainlist a:hover {
     color: var(--color-white);
 }
 
-#second-list a:hover{
+#second-list a:hover {
     color: var(--color-white);
 }
 
-#ap img{
+#ap img {
     width: 25px;
 }
 
-#ap{
+#ap {
     margin-left: 20px;
     margin-right: 20px;
     border-bottom: 2px solid var(--color-secondary);
@@ -225,16 +227,16 @@ padding-bottom: 30px;
     padding-bottom: 5px;
 }
 
-#ap a{
+#ap a {
     padding-top: 2px;
     color: var(--color-secondary);
 }
 
-#ap-bottom img{
+#ap-bottom img {
     width: 30px;
 }
 
-.circle{
+.circle {
     width: 40px;
     height: 40px;
     border: 1px solid var(--color-secondary);
@@ -242,10 +244,10 @@ padding-bottom: 30px;
     justify-content: center;
     overflow: hidden;
     background-color: var(--color-secondary);
-    margin-left:20px;
+    margin-left: 20px;
 }
 
-#ap-bottom h3{
+#ap-bottom h3 {
     padding-bottom: 15px;
     padding-left: 10px;
 }
@@ -318,7 +320,6 @@ padding-bottom: 30px;
 
 #central-bar{
     margin-top: 30px;
-    width: 100%;
 }
 
 .barsbig{
@@ -342,11 +343,9 @@ padding-bottom: 30px;
     background-color: var(--color-white);
 }
 
-
-
 /* header  */
 
-.header{
+.header {
     background-color: #1a1a1a4f;
     color: var(--color-white);
     height: 80px;
@@ -357,59 +356,59 @@ padding-bottom: 30px;
     width: calc(100% - 250px);
     justify-content: end;
     align-items: center;
-    padding:20px 5px 30px 5px;
+    padding: 20px 5px 30px 5px;
 }
 
 
 
 /* text  */
-.tx-white{
+.tx-white {
     color: var(--color-white);
 }
 
 
-.uppercase{
+.uppercase {
     text-transform: uppercase;
 }
 
-h2{
+h2 {
     font-size: 2.5em;
 }
 
-.h2-recently{
+.h2-recently {
     margin-bottom: 30px;
 }
 
-.h2-general{
+.h2-general {
     margin-bottom: 15px;
 }
 
-h3{
+h3 {
     /* font-size: 1.5em; */
 }
 
-.card-title>*{
+.card-title>* {
     text-align: center;
     padding: 5px;
 }
 
-dd{
+dd {
     color: var(--color-secondary);
     /* font-size: 1.2em; */
 }
 
-.dd-general{
+.dd-general {
     margin-bottom: 20px;
 }
 
-.text-center{
+.text-center {
     text-align: center;
 }
 
 
- /* UTILITY  */
+/* UTILITY  */
 
-.btn{
+.btn {
     border: 2px var(--color-white) solid;
     border-radius: 25px;
     padding: 10px 20px;
@@ -419,98 +418,105 @@ dd{
 }
 
 
- /* flex utility  */
+/* flex utility  */
 
-.d-flex{
+.d-flex {
     display: flex;
 }
 
-.justify{
+.justify {
     justify-content: center;
 }
 
-.align{
+.flex-end {
+    justify-content: end;
+}
+
+.align {
     align-content: center;
     align-items: center;
 }
 
-.s-btw{
+.s-btw {
     justify-content: space-between;
 }
 
-.column{
+.column {
     flex-direction: column;
 }
 
- /* media query */
-@media screen and (max-width:992px){
-    nav ul{
+/* media query */
+@media screen and (max-width:992px) {
+    nav ul {
         flex-wrap: wrap;
     }
-    nav ul li{
+
+    nav ul li {
         padding: 5px;
     }
-    .card-cont{
-        flex-wrap: wrap;    
+
+    .card-cont {
+        flex-wrap: wrap;
     }
-    .card{
+
+    .card {
         width: calc(100% / 4 - 20px);
 
     }
 
 }
 
-@media screen and (max-width:768px){
-    .card{
+@media screen and (max-width:768px) {
+    .card {
         width: calc(100% / 2 - 20px);
 
     }
 }
 
-@media screen and (max-width:576px){
-    .small-logo{
+@media screen and (max-width:576px) {
+    .small-logo {
         display: block;
         margin: 20px 30px 5px 25px;
     }
 
-    .logo-side{
+    .logo-side {
         display: none;
     }
 
-    #sidebar{
+    #sidebar {
         width: 100px;
     }
 
-    main{
+    main {
         width: calc(100% - 100px);
     }
 
-    .header{
+    .header {
         width: calc(100% - 100px);
         left: 100px;
     }
 
-    #second-list ul{
+    #second-list ul {
         display: none;
     }
 
-    #sidebar h3{
+    #sidebar h3 {
         display: none;
     }
 
-    #mainlist ul li a:last-child{
+    #mainlist ul li a:last-child {
         display: none;
     }
 
-    #ap a{
+    #ap a {
         display: none;
     }
 
-    #ap{
+    #ap {
         border: none;
     }
 
     #ap-bottom {
-        margin-bottom:20px;
+        margin-bottom: 20px;
     }
 }
