--- a/css/style.css
+++ b/css/style.css
@@ -323,24 +323,36 @@ nav a:hover {
 }
 
 .barsbig{
-    width: 400px;
+    width:100%;
     height: 10px;
     border: 3px solid var(--color-secondary);
     border-radius: 20px;
 }
 
 .leftbig{
-    width: 20%;
+    width: 100px;
     background-color: var(--color-white);
 }
 
+.leftbig:hover{
+    width: 100px;
+    background-color: var(--color-green);
+    cursor: pointer;
+}
+
 .rightbig{
-    width: 80%;
+    width: 350px;
 }
 
 .left{
     width: 20%;
     background-color: var(--color-white);
+}
+
+.left:hover{
+    width: 20%;
+    background-color: var(--color-green);
+    cursor: pointer;
 }
 
 /* header  */
@@ -471,6 +483,20 @@ dd {
         width: calc(100% / 2 - 20px);
 
     }
+
+    .leftbig{
+        width: 50px;
+        background-color: var(--color-white);
+    }
+    
+    .rightbig{
+        width: 250px;
+    }
+    
+    .cont-font{
+        padding-left: 20px;
+    }
+
 }
 
 @media screen and (max-width:576px) {
@@ -519,4 +545,23 @@ dd {
     #ap-bottom {
         margin-bottom: 20px;
     }
+
+    .leftbig{
+        width: 30px;
+        background-color: var(--color-white);
+    }
+    
+    .rightbig{
+        width: 150px;
+    }
+
+    .bars{
+        display: none;
+    }
+
+    .cont-font{
+        padding-left: 20px;
+        display: none;
+    }
+
 }
