--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,7 @@ body {
     background-color: var(--color-sidebar);
     width: 250px;
     height: 100%;
-    overflow-y: auto;
-
+    overflow: hidden;
 }
 
 img {
@@ -339,7 +338,7 @@ nav a:hover {
 
 .leftbig{
     width: 100px;
-    background-color: var(--color-secondary)
+    background-color: var(--color-white)
 }
 
 .rightbig{
